# Cgppy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  YEntry.cpp
Assets/: CMakeLists.txt  YAssetImporter.cpp  YAssetImporter.hpp  YAssetManager.cpp  YAssetManager.hpp  YAssets.cpp  YAssets.h  YCadImporter.cpp  YCadImporter.hpp  YDicomImporter.cpp  YDicomImporter.hpp  YFbxImporter.cpp  YFbxImporter.hpp  YMdlaImporter.cpp  YMdlaImporter.hpp  YObjImporter.cpp  YObjImporter.hpp  YPlyImporter.cpp  YPlyImporter.hpp  YStlImporter.cpp  YStlImporter.hpp
Assets/Shader/: CMakeLists.txt  YGLSLFileIncluder.cpp  YGLSLFileIncluder.hpp  YGLSLStructs.hpp  YShaderManager.cpp  YShaderManager.hpp
Assets/Shader/GLSL/: output.frag  output.vert  path_tracing.comp  path_tracing.frag  path_tracing.vert  rasterization.frag  rasterization.vert  shadow_map.frag  shadow_map.vert
Assets/Shader/GLSL/Common/: define.glsl  global_scene_block.glsl  global_ubo.glsl  push_constant_object.glsl  push_constants.glsl  stroage_buffer_object.glsl  struct.glsl  uniform_buffer_object.glsl  uniform_image_path_tracing.glsl  uniform_sampler_path_tracing.glsl  uniform_sampler_random.glsl  uniform_sampler_rasterization.glsl  uniform_sampler_shadow_mapping.glsl
Assets/Shader/MSL/: CMakeLists.txt  shader.air  shader.metal  shader.metallib
Cmake/Modules/: Findjemalloc.cmake  Findshaderc.cmake
Components/: YAABBComponent.hpp  YBVHNodeComponent.hpp  YComponent.hpp  YLightComponent.hpp  YMaterialComponent.hpp  YMeshComponent.hpp
Core/: CMakeLists.txt  YAsyncTask.cpp  YAsyncTask.hpp  YCMemoryManager.c  YCMemoryManager.h  YDefines.h  YGlobalFunction.cpp  YGlobalFunction.h  YGlobalInterface.cpp  YGlobalInterface.hpp  YLogger.cpp  YLogger.h  YMath.cpp  YMath.h  YProfiler.cpp  YProfiler.hpp  YThreadSafeQueue.cpp  YThreadSafeQueue.hpp
EventManagement/: CMakeLists.txt  YCuttingHandler.cpp  YCuttingHandler.hpp  YEvent.hpp  YEventHandler.hpp  YEventHandlerManager.cpp  YEventHandlerManager.hpp  YNoneHandler.cpp  YNoneHandler.hpp
Scene/: CMakeLists.txt  YEntity.cpp  YEntity.hpp  YSceneManager.cpp  YSceneManager.hpp
System/: CMakeLists.txt
System/MaterialSystem/: CMakeLists.txt  YMaterialSystem.cpp  YMaterialSystem.hpp
System/PhysicsSystem/: CMakeLists.txt  YPhysicsSystem.cpp  YPhysicsSystem.hpp
System/RenderingSystem/: CMakeLists.txt  YDeveloperConsole.cpp  YDeveloperConsole.hpp
System/RenderingSystem/Backend/: CMakeLists.txt  YRendererBackend.cpp  YRendererBackend.hpp  YRendererBackendManager.cpp  YRendererBackendManager.hpp
System/RenderingSystem/Backend/Metal/: CMakeLists.txt  Cgppy-Swift.h  YBridge.mm  YCppSwiftBridge.h  YExternalInterface.swift  YMetalBackend.cpp  YMetalBackend.hpp  YMetalView.swift
System/RenderingSystem/Backend/OpenGL/: CMakeLists.txt  YOpenGLBackend.cpp  YOpenGLBackend.hpp
System/RenderingSystem/Backend/Vulkan/: CMakeLists.txt  YVulkanBackend.cpp  YVulkanBackend.hpp
System/RenderingSystem/Backend/Vulkan/Core/: CMakeLists.txt  YVulkanBuffer.c  YVulkanBuffer.h  YVulkanContext.c  YVulkanContext.h  YVulkanDevice.c  YVulkanDevice.h  YVulkanImage.c  YVulkanImage.h  YVulkanPipeline.c  YVulkanPipeline.h  YVulkanRenderStage.c  YVulkanRenderStage.h  YVulkanResource.c  YVulkanResource.h  YVulkanSwapchain.c  YVulkanSwapchain.h  YVulkanTypes.h
System/RenderingSystem/Backend/Vulkan/System/: CMakeLists.txt  YVulkanOutputSystem.c  YVulkanOutputSystem.h  YVulkanPathTracingSystem.c  YVulkanPathTracingSystem.h  YVulkanRasterizationSystem.c  YVulkanRasterizationSystem.h  YVulkanRenderingSystem.cpp  YVulkanRenderingSystem.h  YVulkanShadowMappingSystem.c  YVulkanShadowMappingSystem.h
System/RenderingSystem/Frontend/: CMakeLists.txt  YCamera.cpp  YCamera.hpp  YGlfwWindow.cpp  YGlfwWindow.hpp  YRendererFrontendManager.cpp  YRendererFrontendManager.hpp  YTrackball.cpp  YTrackball.hpp
